# github-org-report

./: .gitignore  .pre-commit-config.yaml  QUALITY_SCORING.md  README.md  analyzer.py  main.py  output.py  pyproject.toml  pytest.ini  quality_config.json  requirements.txt  utils.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
tests/: test_analyzer.py  test_output.py  test_utils.py
